--- a/burek.html
+++ b/burek.html
@@ -6,7 +6,7 @@
     <title>Recept za burek</title>
 </head>
 <body>
-    <h1>Burek</h1>
+    <h1 style="background-color: crimson;">Burek</h1>
     <img src="slik BUREKA.webp" alt="slika bureka " width="200" height="200">
     <h2>Sastojci</h2>
     <ul>
